--- a/content/appro.tex
+++ b/content/appro.tex
@@ -1,23 +1,25 @@
 \chapter{Approach}
 
-In this section after describing the general convolutional architecture in spiking neural network, we discuss two different approaches to build convolutional deep belief networks.
+In this section after describing the general convolutional architecture in spiking neural network, to find the best performing spiking convolutional DBN, we discuss two different approaches to build these.
 
-The first one is the most classical one, where a offline/ in discrete time trained DBN is transferred to spiking neural networks.
+The first one is the more classical one, where a in discrete time trained DBN is transferred to spiking neural networks.
 The second approach trains the RBMs event based with STDP directly as spiking neural networks. 
+
+In chapter 6, we will then evaluate and compare the performance of both approaches.
 
 \section{Convolutional architecture in spiking neural network}
 
 We implement a convolutional layer with receptive fields and shared weights between two neuron populations. 
-Each population has a similar 3 dimensional topology as in "normal" CNNs with the number of neurons given by $\# \text{neurons} = \text{channels} \times \text{height} \times \text{width}$.
+Each population has a similar three dimensional topology as in "normal" CNNs with the number of neurons given by $n_{ \text{neurons}} = \text{channels} \times \text{height} \times \text{width}$.
 
-Groups of neurons in the bottom layer in close vicinity, a so-called receptive fields, are each connected with synapses to a top layer neuron.
-These receptive fields have the same size $n$ and shape and shared the same synaptic weights (given the top layer neurons belong to the same feature map).
-The receptive fields are overlapping by $n-s$ neurons, where $s$ is the stride, and the output neurons have the same topology as their input regions. 
-Recent state-of-the-art systems have mostly reached the common consensus, of choosing a stride of $s=1$, which we have adapted throughout this work.
+Groups of neurons in the bottom layer in close vicinity, a so-called receptive fields, are each connected with synapses to the same top layer neuron.
+These receptive fields have the same shape and size $n$ and share the same synaptic weights (given the top layer neurons belong to the same feature map).
+Adjacent receptive fields are overlapping by one neuron and the output neurons have the same topology as their input regions. 
 
-The receptive fields cover partial regions of the input data, where the synaptic weights from the bottom layer neurons to the top layer neuron can the be seen as a convolution over the partial input data.
-Since the weight of receptive field can be shared, the neural activity in the top layer can be seen as a convolution over the input data with a filter of the size of the receptive fields.
+A receptive field covers a partial region of the input data and the synaptic weights from the bottom layer neurons to the top layer neuron can the be seen as a convolution over the partial input data.
+Since the weights of the receptive field can be shared, the neural activity in the top layer can be seen as a convolution over the input data with a filter of the size of the receptive fields.
 In this case the top layer activation of receptive fields with the same weights can also be called a feature map.
+By using more neurons with different set of shared weights over the same receptive fields, more feature maps can be implemented.     
 
 \begin{figure}
 	\centering
@@ -38,7 +40,7 @@ In this case the top layer activation of receptive fields with the same weights 
 \end{figure}
 
 
-By using more neurons with different set of shared weights over the same receptive fields, more feature maps can be implemented.     
+
 
 \section{Conversion}
 
@@ -53,19 +55,18 @@ The conversion approach can be roughly described in two steps:
 
 To train a convolutional DBNs we proceed similar to Hinton and Lee.
 
-At first the convolutional RBMs are greedily trained with CD, as described in section 2.x, on images batches of batch-size $b$ for a certain number of iterations over the whole dataset, in this context referred to as epochs.
+At first the convolutional RBMs are trained greedily with CD, as described in section 2.x, for a certain number of iterations on data batches of batch-size $b$.
 After a RBM is trained, we convert the dataset by sampling of the hidden layer of the RBM (one sampling/forward-pass step), into a new dataset:
 \[
-x' = \sigma(W * x) > rnd,
+p(x') = \sigma(W * x) .
 \]
-where $rnd$ is a random number between $0$ and $1$.
 
 On this converted dataset the next convolutional RBM is trained similar to the previous one.
 
-Evaluating feature qualities is still an active top of research.
-To get a measurement of our feature quality we use labeled data and train a classifier on top of the extracted features.
+Evaluating feature qualities is still an active research topic.
+To get a measurement of our feature quality we use labelled data and train a classifier on top of the extracted features.
 To stay in a biological plausible domain, we train a fully connected RBM on the top level features as well as the label of the data samples, to associate the features with the correct labels.
-Out approach is similar to the approach of Hinton.
+Out approach is similar to the approach of Hinton (see Figure 4.2).
 
 \begin{figure}
 	\centering
@@ -74,12 +75,12 @@ Out approach is similar to the approach of Hinton.
 	\label{fig:dbnmnist}
 \end{figure}
 
-To evaluate the final performance, we input a data sample without a label into the DBN and let the top layer sample a label prediction by performing Gibbs sampling steps.
+To evaluate the final performance, we input a data sample without a label into the DBN and let the top layer sample a label prediction by performing Gibbs sampling steps, which can be seen as a reconstruction of partially presented data (as mentioned in section 2.1).
 
 
 \subsection{Conversion}
 
-For the conversion we have three different variations
+For the conversion we present three different variations.
 
 \begin{figure}
 	\centering
@@ -95,19 +96,21 @@ For the conversion we have three different variations
   		\caption{Structure of a spiking DBN with LIF neurons.}
   		\label{fig:sub2}
   	\end{subfigure}
-	\caption{Different converted structures of a CNN and a DBN. The CNN is converted to a spiking network, by simply using simple LIF neurons (white) (a). In the DBN (b) the LIF neurons are put in a high conductance state (black), by inserting high frequency poisson noise. The weights are scaled accordingly to fit the activations of the neurons.}
+	\caption{Different converted structures of a CNN and a DBN. The CNN is converted to a spiking network, by simply using simple LIF neurons (white) (a). In the DBN (b) the LIF neurons are put in a high conductance state (black), by inserting high frequency Poisson noise. The weights are scaled accordingly to fit the activations of the neurons.}
 	\label{fig:converted}
 \end{figure}
 
 
 \paragraph{Conversion as CNN} 
 
-One way to convert the DBN to the spiking domain, is by interpreting it as a pretrained CNN with purely forward connections (we do not perform any commonly used gradient descent fine tuning to get comparable results with only CD trained models, but fine tuning could further improve the performance).
+One way to convert the DBN to the spiking domain, is by interpreting it as a pre-trained CNN with purely forward connections (we do not perform any commonly used gradient descent fine tuning to get comparable results with only CD trained models, but fine tuning could further improve the performance).
+While this allows classification, it removes the generative capabilities of the network.
 
 For the conversion, we proceed similar to Cao and Diehl.
-They use avg pooling and ReLU functions, to get a similar architecture as SNNs.
-In contrast, we don't use any pooling, since for RBM there is no simple way to integrate avg pooling (used by Cao and Diehl in their trained CNNs), and for spiking CNNs there is no simple way to integrate probabilistic max pooling, which is currently probably the only training integrated pooling thought of for RBMs.
-We also use the sigmoid function, since RBMs are commonly trained with sigmoid activations (even so some approaches proposed ReLU for RBMs as well (see Hinton)) and the input-rate output-rate transfer function of rate based LIF neurons with a refractory period matches the sigmoid function more closely.
+They use average pooling and ReLU functions, to get a similar architecture as SNNs.
+In contrast, we don't use any pooling, since for RBM there is no simple way to integrate average pooling (used by Cao and Diehl in their trained CNNs), and for spiking CNNs there is no simple way to integrate probabilistic max pooling, which is to our knowledge currently the only training integrated pooling thought of for RBMs.
+We also use the sigmoid function, since RBMs are commonly trained with sigmoid activations (even so some approaches proposed ReLU for RBMs as well (see Hinton)).
+Furthermore the input-rate output-rate transfer function of rate based LIF neurons with a refractory period matches the sigmoid function more closely.
 
 The DBN layers are replaced by a LIF neuron population layers with an identical architecture. 
 The connections are replaced by (directed) synapses, with the weights of the DBN synapses scaled with a constant factor, to get similar activations.
@@ -115,19 +118,15 @@ The connections are replaced by (directed) synapses, with the weights of the DBN
 
 \paragraph{Conversion with conductance-based LIF}
 
-Another way to convert the DBN to the spiking domain, is by interpreting it as a directed graphical model, a sigmoid belief network, and perform ancestral sampling.
-
+Another way to convert the DBN to the spiking domain, is by interpreting it as a directed graphical model, a sigmoid belief network, and performing ancestral sampling.
 This approach is heavily based on the synaptic sampling theory, i.e. it uses spiking neurons to perform sampling.
-
-The sampling can be either performed LIF neurons as described in 3.2.
+The sampling can be either performed with current-based or conductance-base LIF neurons as described in section 3.2.
 
 For the COBA neurons, we choose a biological plausible neuron model (see parameters in table). 
-The high conductance and increased mean potential (gaussian distributed) and thus a firing probabilty of .5, is achieved by using high frequency Poisson generated (inhibitory and exhibitory) spikes to bring the neuron to a high conductance state (HCS). 
+The high membrane conductance, an increased Gaussian distributed mean membrane potential and thus a firing probability of $0.5$, is achieved by using high frequency Poisson generated inhibitory and excitatory spikes to bring the neuron to a high conductance state (HCS). 
+This neuron model has an input-rate output-rate transfer function which approximates a sigmoid function.
 
-This neuron model has an input-current/spikes to firing frequency mapping/ transfer function which approixmates a sigmoid function.
-
-
-The PSP are chosen to have an alpha shape in stead of rectangular PSP, which as described in 3.2 may introduce some discrepancies when performing sampling in comparison to Gibbs sampling.
+The PSPs are chosen to have an alpha shape instead of rectangular shape, which as described in 3.2 may introduce some discrepancies when performing sampling in comparison to Gibbs sampling, but is more biologically plausible.
 
 \begin{figure}
 	\centering
@@ -154,7 +153,7 @@ The PSP are chosen to have an alpha shape in stead of rectangular PSP, which as 
 
 \end{figure}
   
-The DBN is converted by simply converting each layer to a layer of COBA LIFs with poisson noise, and the connections are transformed to synapses with the weights scaled to achieve a action function similar to the sigmoid function.
+The DBN is converted by simply converting each layer to a layer of conductance-based LIF neurons with Poisson noise, and the connections are transformed to synapses with the weights scaled to achieve a action function similar to the sigmoid function.
 
 Consequently the DBN simply performs ancestral sampling with the data sample as evidences and the label as inferred state.   
 
@@ -163,11 +162,10 @@ Consequently the DBN simply performs ancestral sampling with the data sample as 
 
 To reduce the computational expenses of the COBA models, they can be replaced by less computational complex CUBA models.
 
-Their model parameters as chose to simulate a HCS state.
+The model parameters as chose to simulate a HCS state.
+Therefore the membrane time constant is reduced as well as the membrane conductance increased and a static input current is inserted.  
 
-Therefore the membrane time constant as well as the membrane conductance are reduced and a static input current is inserted.  
-
-By adding high frequency poisson noise, a sigmoid shaped input-rate output-rate transfer function is achieved.
+By adding high frequency Poisson noise, a sigmoid shaped input-rate output-rate transfer function is achieved.
 
 \begin{figure}
 	\centering
@@ -196,11 +194,10 @@ The DBN conversion is similar to the COBA case, where the COBA neurons are now r
 
 \section{eCD}
 
-Another approach tries to learn the convolutional spiking DBN with an STDP based learning rule. 
+Another approach implements the learning of the convolutional spiking DBN with an STDP based learning rule. 
 
-The main idea of the learning rule is adapted from Neftci.
-We also use a LIF neuron model.
-A similar STDP rule to the one described in 3.2 is used, but we extended the model with a learning rate. 
+The main idea of the learning rule is adapted from Neftcis eCD and applied to a network of LIF neurons with symmetric bidirectional synapses.
+We modify the STDP learning rule described in 3.2 is used, by extending the model with a learning rate. 
 This rule can be reformulated as an iterative rule as follows:
 \begin{itemize}
 \item The visible unit $v$ spikes: 
@@ -220,16 +217,16 @@ A_v = A_v \exp(\frac{\Delta t}{\tau}) ,\\
 \end{split}
 \]
 \end{itemize}
-where $g(t)$ is the STDP status flag, $\Delta t$ is the time difference to the last previous spike, and $a_{delta}$ represents the input of a Dirac-shaped spike train.
+where $g(t)$ is the STDP status flag, $\Delta t$ is the time difference to the last previous spike, and $a_{delta}$ represents the input of the incoming spike.
 
 
-The original division into four training phases poses similarites to pCD since the activity of the hidden layer of the previous step is used as starting state for the next step, we extent the model by a 5th phase between the two data samples, where the model is "flushed" thus enabling normal CD:
+The original division into four training phases poses similarities to pCD since the activity of the hidden layer of the previous step is used as starting state for the next step, we extent the model by a 5th phase between the two data samples, where the model is "flushed" thus enabling normal CD:
 
 \begin{enumerate}
 \item The data signal is applied and the system is allowed to model the data distribution ($g(t)=0$)
-\item Positive STDP is used to get $v_i h_j$-data (with stdp) and is added to the weights (postive phase $g(t)=1$)
+\item Positive STDP is used to get $v_i h_j$-data and is added to the weights (postive phase $g(t)=1$)
 \item The data signal is remove and the system is allowed to model the model distribution ($g(t)=0$)
-\item Negative STDP is used to get $v_i h_j$-model (with stdp) and is substracted from the synaptic weights (negative phase $g(t)=-1$).
+\item Negative STDP is used to get $v_i h_j$-model and is subtracted from the synaptic weights (negative phase $g(t)=-1$).
 \item The neural activity is "flushed" by inserting a strong negative current into the visible and hidden layer, to learning is performed ($g(t)=0$).
 \end{enumerate}
 
@@ -241,11 +238,11 @@ The original division into four training phases poses similarites to pCD since t
 \end{figure}
 
 
-\subsection{Convolution}
+\subsection{Convolution in eCD}
 
-We implement convolution with local receptive field and sharing weights between neuron through weight synchronization.
-Since each weight has their local STDP based update rule (eCD), we have to find a way to synchronize/share weights between all neurons in a layer.
-To keep the weights in neuron in a layer the same, we perform a weight synchronization step at discrete time steps, since updating all weights after a single update did not show any promising results.
+We implement convolution with local receptive fields and shared weights between synapses through weight synchronization.
+Since each weight has their local STDP based update rule (eCD), we have to find a way to synchronize weights between synapses of the same feature map.
+To keep the shared weights the same, we perform a weight synchronization step at discrete time steps, since updating all weights after a single update did not show any promising results, due to some self-reinforcement and resulting weight "explosion" (see Fig X in appendix for further insight).
 Thus the synchronization at a time step for weight shared weights $w_i$ , $w_j$ can be described by the following rule:  
 \[
 \begin{split}
@@ -265,7 +262,7 @@ Thus we can simply take the mean of the weight changes and apply it to all the w
 
 \paragraph{Lateral inhibition}
 In addition we introduce fixed negative connections between neuron in the top/ hidden layers (biological plausible --> more sparse King).
-This removes one advantage of RBMs since the hidden layers are no longer independed, which makes it harder to sample from the true distributions, but since the network continuously performs sampling steps, the approximation is is sufficient, if the weights are not to strong and prevent a change to a different mode.
+This removes one advantage of RBMs since the hidden layers are no longer independent, which makes it harder to sample from the true distributions, but since the network continuously performs sampling steps, the approximation has shown to be sufficient, if the weights are not too strong and prevent changes of different modes (see Fig X in Appendix ).
 
 \begin{figure}
 	\centering
@@ -275,28 +272,26 @@ This removes one advantage of RBMs since the hidden layers are no longer indepen
 \end{figure}
 
 
-By connecting neurons to neurons on a similar positions in other feature maps, appears to make the features more discriminative and less correlated.
+Connecting neurons to neurons on a similar positions in other feature maps appears to make the features more discriminative and less correlated.
 Also this poses some similarities to adding a negative structured bias to the hidden units, which has shown to result in better features (see Norouzi M).
 
-An intuitive interpretation, is that if one feature reacts to a certain input it will be highly active and prevent the others from being active as well and thus prevent them from learning the same.  
+An intuitive interpretation, is that if one feature reacts to a certain input it will be highly active and prevent the others from being active as well and thus prevent them from learning the same features.  
 
 \subsection{Spiking DBNs}
 
 To build up a spiking DBN we train the convolutional BMs layer-wise and forward the input of the previous layer to the next layer.
 
-To be exact the spiking DBN is a mixture between a DBN and a DBM, since the single BMs are still bidirectional connected and only the hidden layer is forwarded in a directed manner.
-Converting a RBM to a directed BN did not show any good results, since the activation of the hidden unit turned out to be important for generating a good estimate of the data distribution. 
+Either replacing the symmetric bidirectional synapses with forward only synapses or keeping them bidirected, did not show any significant differences (see Fig appendix). 
+To be exact the spiking DBN with still bidirectional synapses in the bottom RBMs is a mixture between a deep belief network and a deep Boltzmann machine, since the single Boltzmann machines are still bidirectional connected and only the hidden layer activations are forwarded in a directed manner to the next Boltzmann machines.
 
-$IMAGE$
-
-Due to some top-down influences, when stacking a new BM on the trained BM, the hidden distribution gets distorted and unfit input for the new BM to be trained on. 
+Due to some top-down influences, when stacking a new BM  on the trained BM directly, the hidden distribution gets distorted and unfit input for the new BM to be trained on. 
 To solve this in our case we simply use forward connections from the hidden activations to the input layer of a new two layered BM. 
-An approach similar to Salakhutdinovs DBMs with doubling the weights and composing the models in the end may sound promising and could be tried as well.
+An approach to predict the influences of the top RBM in advance e.g like Salakhutdinovs DBMs with doubling the weights or joint training may sound promising and could be an area for further research.
 
 \begin{figure}
 	\centering
     	\includegraphics[width=0.4\textwidth]{imgs/spike_dbn.png} 
-    \caption{The structure of a deep belief network trained with eCD. The DBN conists of single Boltzmann machines stacked on top of each others. In contrast to analog DBNs, the Boltzmann machines are still bidirection connected, and two Boltzmann machines are stacked up by forwarding the activations of the hidden layer in the bottom RBM to the visible layer in the top RBM.}
+    \caption{The structure of a deep belief network trained with eCD. The DBN consists of single Boltzmann machines stacked on top of each others. In contrast to analog DBNs, the Boltzmann machines are still bidirection connected, and two Boltzmann machines are stacked up by forwarding the activations of the hidden layer in the bottom RBM to the visible layer in the top RBM.}
 	\label{fig:spikedbn}
 \end{figure}
 
